[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/menus/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 347.15
margin_top = 111.585
margin_right = 554.148
margin_bottom = 194.585
text = "Single player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 348.703
margin_top = 243.142
margin_right = 559.703
margin_bottom = 310.142
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 351.722
margin_top = 366.537
margin_right = 560.722
margin_bottom = 444.537
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
